# socket-basics

./: .commitlintrc.yml  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  action.yml  pyproject.toml
.claude/commands/: bump-version.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: _docker-pipeline.yml  commit-lint.yml  core-tool-watch.yml  dependabot-review.yml  dependency-review.yml  publish-docker.yml  python-tests.yml  smoke-test.yml  update-major-version-tag.yml
.hooks/: setup.py  version-check.py
app_tests/: Dockerfile  pyproject.toml
app_tests/c/: vulnerable_app.c
app_tests/cpp/: vulnerable_app.cpp
app_tests/dotnet/: VulnerableApp.cs
app_tests/elixir/: vulnerable_app.ex
app_tests/erlang/: vulnerable_app.erl
app_tests/go/: vulnerable_app.go
app_tests/java/: VulnerableApp.java
app_tests/javascript/: vulnerable_app.js
app_tests/kotlin/: VulnerableApp.kt
app_tests/php/: vulnerable_app.php
docs/: alert-quality-improvement-plan.md  github-action.md  github-pr-comment-guide.md  local-install-docker.md  local-installation.md  parameters.md  pre-commit-hook.md  releasing.md
scripts/: check_core_tools.py  ci_matrix.py  enrich_rules.py  integration-test-docker.sh  preview_pr_comments.py  rewrite_messages.py  smoke-test-docker.sh  sync_release_version.py  update_changelog.py  update_cwe_catalog.py  verify_jira_dashboard_config.py
socket_basics/: __init__.py  connectors.yaml  notifications.yaml  socket_basics.py
tests/: README.md  run_discovery_tests.py  test_changed_files_scope.py  test_config_custom_sast.py  test_config_source.py  test_config_trivy_regressions.py  test_dockerfile_discovery.py  test_github_helpers.py  test_github_pr_notifier.py  test_jira_notifier_params.py  test_msteams_notifier_params.py  test_notification_action_filter.py  test_notification_manager_github_pr.py  test_notification_manager_params.py  test_opengrep_custom_rules.py  test_pr_formatters.py  test_sast_ignore_overrides.py  test_slack_notifier_params.py  test_triage.py  test_webhook_notifier_params.py  test_webhook_payload.py
(+106 files in other folders)
